--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <script>
     async function main() {
-      await liff.init({ liffId: "2007365723-EW7MbQ1V" }); // 🔁 ใส่ LIFF ID ของคุณที่นี่
+      await liff.init({ liffId: "2007365723-EW7MbQ1V" });
       if (!liff.isLoggedIn()) return liff.login();
 
       const profile = await liff.getProfile();
@@ -19,10 +19,8 @@
       const data = await res.json();
       const role = data.role || 'user';
 
-      // ✅ Redirect ไปยังหน้าที่เหมาะสม
       window.location.href = role === 'admin' ? 'admin_main.html' : 'user_main.html';
     }
-
     main();
   </script>
 </body>
